# RBrowserPlugin

./: .gitignore  AFAQ  DESCRIPTION  GNUmakefile  Installation.txt  KnownIssues.txt  NAMESPACE  Notes.xml  OldLinuxInstructions.txt  Todo.xml  configure  configure.in  linuxInstall.txt  macInstall.txt
R/: CustomMarshalling.R  GtkMozEmbed.R  Javascript.R  NPAPI.R  Raphael.R  classes.R  gabe.R  getCategories.R  init.R  jsObjects.R  jscallfuns.R  nsXPTCVariantFlags.R  nsXPTType.R  nsXPTTypeFlags.R  parseEval.R  unified.R  utilities.R  variant.R  xptcall.R  zzz.R
Web/: GNUmakefile  index.html
inst/: .Rhistory  JavascriptNotes.txt  Status.Rdb  UsingRFirefox.Rdb  index.html  runFirefox.sh  runFirefox2.sh  runFirefox3.sh  runfirefox.sh.in  testdev.html
inst/FirefoxExtExamples/: exLogisticDynDoc.html  iDataAnalysis.html
inst/FirefoxExtTests/: call1test.html  calltest.html  datagrid.js  gettest.html  oneReval.html  raphaeltest.html  raphinjscript.html  raphlattice.html  returnRFun.html  slider.html  spiderMonkeyTest.html
inst/NPAPI/: BasicPlugin.cpp  BasicPlugin.h  Makefile.in  Makefile.win  Makevars.win  NPConversions.cpp  RNPAPI.cpp  RNPAPI.h  WebR.h  WebREngine.cpp  WebRFunction.cpp  WebRMutex.cpp  WebRMutex.h  WebRObject.cpp  WebRObjectClasses.h  WebRPlugin.cpp  WinInstallerScript.iss  WorkingWebR.cpp  WorkingWebR.h  defs.def  jsStartup.h  plugin.cpp  plugin.h  resource.rc  test.html  tinytest.html
inst/NPAPITests/: latticeplot.html  raphEvent.html  raphJSEvent.html  reftest.html  twoRScripts.html  typeofTest.html
inst/TU/: Makefile  run.R  xptcvariant.cc  xptcvariant.cc.001t.tu
inst/WorkingNPAPI/: BasicPlugin.h  WebR.h  (+10 more)
man/: RFirefox.Rd
notes/: init.R
src/: CIDs.cc  JSClasses.cpp  JSConversions.cpp  JSConversions.h  Makevars  Makevars.in  Makevars.win  Moz191Compat.h  NPAPI.cpp  NPConversions.cpp  RGtkMozEmbed.cpp  RJavascript.cpp  RMozilla.h  RXPCOM.cpp  Raphael.cpp  RaphaelDev.cpp  RnsIDocument.cpp  TestXPTCInvoke.cpp  WebRFunction.cpp  WebRObject.cpp  gabe.c  jscallfuns.c  ns_init.cc  rQueueStub.cpp  reflection.cc  xptVariants.cc  xptVariants.h  xptcall.cc
tests/: variant.R  xptcall.R
(+154 files in other folders)
