AC_INIT(src/ns_init.cc)

AC_ARG_WITH(xul-sdk, [   --with-xul-sdk      directory in which the xulrunner-sdk distribution is located],
               XUL_SDK=${withval})
AC_ARG_WITH(firefox, [   --with-firefox	    firefox executable (including path if necessary)], FF=${withval}, FF=firefox)

AC_ARG_WITH(r-home, [--with-r-home 	    Location of an R build with a shared library], R_HOME=${withval}, : ${R_HOME=‘R RHOME‘})

AC_ARG_ENABLE(mac, [--enable-mac	    Configure RFirefox for Mac OS X], IS_MAC=1, IS_MAC=0)

AC_SUBST(XUL_SDK)
#AC_SUBST(MOZVER)
AC_SUBST(R_HOME)
AC_SUBST(IS_MAC)
AC_SUBST(FF)


if ! test -d "$XUL_SDK" ; then
  echo "Can't find the Xulrunner SDK. Unable to prepare the package for compilation."
  echo "For now, specify the Xulrunner SDK directory using --with-xul-sdk=<path> in configure-args"
  AC_MSG_ERROR( "Eventually this will be detected automatically.") 
fi


if test -z "${R_HOME}"; then
echo "could not determine R_HOME"
exit 1
fi

AC_OUTPUT(src/Makevars inst/components/GNUmakefile inst/runfirefox.sh)

